[package]
description = "A rust port of sl"
documentation = "https://docs.rs/rust-sl/latest"
edition = "2021"
homepage = "https://docs.rs/crate/rust-sl/latest"
license = "AGPL-3.0-or-later"
name = "rust-sl"
repository = "https://github.com/amorphobia/rust-sl"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.1.12", features = ["derive"]}
crossterm = "0.23"
ctrlc = "3.2"
lazy_static = "1.4.0"

[profile.release]
panic = 'abort'

[[bin]]
name = "sl"
path = "src/main.rs"
